--- a/Amostragem/Estratificada_conglomerada.ipynb
+++ b/Amostragem/Estratificada_conglomerada.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Nessa amostragem, vamos olhar para cada estrato para retirar amostras para então formar nossa amostra final\n",
     "\n",
-    "import pandas\n"
+    "import pandas as pd\n",
+    "from random import sample\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +123,7 @@
        "11     D      12"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,28 +131,26 @@
    "source": [
     "a = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]\n",
     "b = [\"A\", \"A\", \"A\", \"A\", \"B\", \"B\", \"C\", \"C\", \"C\", \"D\", \"D\", \"D\"]\n",
-    "\n",
-    "df = pandas.DataFrame({\"grupo\": b, \"values\": a})\n",
-    "\n",
+    "df = pd.DataFrame({\"grupo\": b, \"values\": a})\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Vamos fazer uma amostragem estratificada onde cada estrato vai ter o mesmo tamanho na amostra final, a menos que a quantidade dentro do estrato seja menor do que a que queremos.\n",
+    "# Função de amostragem estratificada (tamanho fixo por estrato)\n",
     "def amostra_estratificada_1(df, n, estrato):\n",
-    "    amostra = df.groupby(estrato, group_keys=False).apply(lambda x: x.sample(min(len(x), n)))\n",
-    "\n",
+    "    amostra = df.groupby(estrato, group_keys=False).apply(lambda x: x.sample(min(len(x), n))).reset_index(drop=True)\n",
     "    return amostra"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -159,23 +158,23 @@
      "output_type": "stream",
      "text": [
       "Amostra Estratificada 1:\n",
-      "   grupo  values\n",
-      "0      A       1\n",
-      "3      A       4\n",
-      "5      B       6\n",
-      "4      B       5\n",
-      "8      C       9\n",
-      "7      C       8\n",
-      "11     D      12\n",
-      "10     D      11\n"
+      "  grupo  values\n",
+      "0     A       3\n",
+      "1     A       2\n",
+      "2     B       5\n",
+      "3     B       6\n",
+      "4     C       7\n",
+      "5     C       8\n",
+      "6     D      10\n",
+      "7     D      11\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\cezar\\AppData\\Local\\Temp\\ipykernel_13732\\2745407236.py:3: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
-      "  amostra = df.groupby(estrato, group_keys=False).apply(lambda x: x.sample(min(len(x), n)))\n"
+      "C:\\Users\\cezar\\AppData\\Local\\Temp\\ipykernel_13732\\2686602013.py:4: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  amostra = df.groupby(estrato, group_keys=False).apply(lambda x: x.sample(min(len(x), n))).reset_index(drop=True)\n"
      ]
     }
    ],
@@ -186,99 +185,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Amostra Estratificada 1:\n",
-      "   grupo  values\n",
-      "0      A       1\n",
-      "2      A       3\n",
-      "4      B       5\n",
-      "5      B       6\n",
-      "7      C       8\n",
-      "6      C       7\n",
-      "10     D      11\n",
-      "11     D      12\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\cezar\\AppData\\Local\\Temp\\ipykernel_13732\\2745407236.py:3: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
-      "  amostra = df.groupby(estrato, group_keys=False).apply(lambda x: x.sample(min(len(x), n)))\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Amostra Estratificada 1:\")\n",
-    "print(amostra_estratificada_1(df, 2, 'grupo'))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Amostra Estratificada 1:\n",
-      "   grupo  values\n",
-      "3      A       4\n",
-      "1      A       2\n",
-      "2      A       3\n",
-      "5      B       6\n",
-      "4      B       5\n",
-      "8      C       9\n",
-      "7      C       8\n",
-      "6      C       7\n",
-      "10     D      11\n",
-      "9      D      10\n",
-      "11     D      12\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\cezar\\AppData\\Local\\Temp\\ipykernel_13732\\2745407236.py:3: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
-      "  amostra = df.groupby(estrato, group_keys=False).apply(lambda x: x.sample(min(len(x), n)))\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Amostra estratificada com estratos de tamanho 3\n",
-    "\n",
-    "print(\"Amostra Estratificada 1:\")\n",
-    "print(amostra_estratificada_1(df, 3, 'grupo'))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Agora, ao invés de definir o tamanho dos estratos, vamos definir o tamanho da amostra final. Cada estrato vai ter uma amostra proporcional à representação do estrato na população.\n",
+    "# Função de amostragem estratificada (tamanho proporcional por estrato)\n",
     "def amostra_estratificada_2(df, N, estrato):\n",
     "    tamanho_pop = df.shape[0]\n",
     "    amostra = df.groupby(estrato, group_keys=False)\\\n",
-    "        .apply(lambda x: x.sample(int(N*len(x)/tamanho_pop)))\\\n",
-    "        .reset_index(drop=True)\\\n",
-    "        .sort_values(by=estrato)\n",
-    "\n",
+    "        .apply(lambda x: x.sample(int(N * len(x) / tamanho_pop))).reset_index(drop=True)\n",
     "    return amostra"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -288,22 +209,22 @@
       "\n",
       "Amostra Estratificada 2:\n",
       "  grupo  values\n",
-      "0     A       4\n",
-      "1     A       3\n",
-      "2     A       1\n",
+      "0     A       2\n",
+      "1     A       4\n",
+      "2     A       3\n",
       "3     B       6\n",
-      "4     C       8\n",
-      "5     C       7\n",
-      "6     D      10\n",
-      "7     D      12\n"
+      "4     C       9\n",
+      "5     C       8\n",
+      "6     D      11\n",
+      "7     D      10\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\cezar\\AppData\\Local\\Temp\\ipykernel_13732\\2820787323.py:5: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
-      "  .apply(lambda x: x.sample(int(N*len(x)/tamanho_pop)))\\\n"
+      "C:\\Users\\cezar\\AppData\\Local\\Temp\\ipykernel_13732\\3764936420.py:5: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  .apply(lambda x: x.sample(int(N * len(x) / tamanho_pop))).reset_index(drop=True)\n"
      ]
     }
    ],
@@ -314,217 +235,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Amostragem por Conglomerado\n",
-    "#Vamos ver como podemos calcular amostras com o método de amostragem por conglomerado.\n",
-    "#Aqui, precisaremos primeiro amostrar aleatóriamente os conglomerados para então pegar todas as observações desses conglomerados escolhidos e formar nossa amostra.\n",
-    "from random import sample\n",
-    "\n",
+    "# Função de amostragem por conglomerado\n",
     "def amostra_conglomerado(df, n_conglomerados, conglomerado):\n",
     "    todos_conglomerados = list(df[conglomerado].unique())\n",
     "    tamanho_conglomerados = len(todos_conglomerados)\n",
     "    n = min(n_conglomerados, tamanho_conglomerados)\n",
     "    conglomerados_sorteados = sample(todos_conglomerados, n)\n",
-    "    \n",
     "    amostra = df[df[conglomerado].isin(conglomerados_sorteados)]\n",
     "    return amostra"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>grupo</th>\n",
-       "      <th>values</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>A</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>A</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>A</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>A</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>C</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>C</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>C</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  grupo  values\n",
-       "0     A       1\n",
-       "1     A       2\n",
-       "2     A       3\n",
-       "3     A       4\n",
-       "6     C       7\n",
-       "7     C       8\n",
-       "8     C       9"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Amostra por Conglomerado:\n",
+      "   grupo  values\n",
+      "6      C       7\n",
+      "7      C       8\n",
+      "8      C       9\n",
+      "9      D      10\n",
+      "10     D      11\n",
+      "11     D      12\n",
+      "   grupo  values\n",
+      "4      B       5\n",
+      "5      B       6\n",
+      "6      C       7\n",
+      "7      C       8\n",
+      "8      C       9\n",
+      "9      D      10\n",
+      "10     D      11\n",
+      "11     D      12\n"
+     ]
     }
    ],
    "source": [
-    "#Amostra por conglomerado com tamanho 2 conglomerados.\n",
-    "amostra_conglomerado(df, 2, 'grupo')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>grupo</th>\n",
-       "      <th>values</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>A</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>A</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>A</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>A</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>B</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>B</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>C</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>C</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>C</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  grupo  values\n",
-       "0     A       1\n",
-       "1     A       2\n",
-       "2     A       3\n",
-       "3     A       4\n",
-       "4     B       5\n",
-       "5     B       6\n",
-       "6     C       7\n",
-       "7     C       8\n",
-       "8     C       9"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#Amostra por conglomerado com tamanho 3 conglomerados\n",
-    "amostra_conglomerado(df, 3, 'grupo')"
+    "print(\"\\nAmostra por Conglomerado:\")\n",
+    "print(amostra_conglomerado(df, 2, 'grupo'))\n",
+    "print(amostra_conglomerado(df, 3, 'grupo'))"
    ]
   }
  ],
